--- a/SASS/main.css
+++ b/SASS/main.css
@@ -20,92 +20,6 @@ body {
 .container {
   background: rgba(247, 247, 247, 0.968627451);
 }
-.container .header {
-  display: flex;
-  align-items: center;
-  position: relative;
-  background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(0, 0, 0, 0.7) 99.94%), url("../img/headerBack.png") center/cover no-repeat;
-  height: 95vh;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
-}
-.container .header__logo {
-  position: absolute;
-  height: 7rem;
-  width: 5.6rem;
-  top: 5rem;
-  left: 5rem;
-}
-.container .header__box {
-  width: 100%;
-  text-align: center;
-  color: #FAFAFA;
-}
-.container .header__box .title-first__main {
-  display: block;
-  font-weight: 800;
-  font-size: 5rem;
-  line-height: 6rem;
-  letter-spacing: 1rem;
-  text-transform: uppercase;
-  animation-name: leftToRight;
-  animation-duration: 2s;
-  animation-timing-function: ease-in-out;
-}
-.container .header__box .title-first__sub {
-  display: block;
-  font-weight: 100;
-  font-size: 4rem;
-  line-height: 4.8rem;
-  letter-spacing: 0.5rem;
-  margin-top: 1rem;
-  animation-name: rightToLeft;
-  animation-duration: 2s;
-  animation-timing-function: ease-in-out;
-}
-.container .header .btn {
-  display: inline-block;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #777777;
-  position: relative;
-  font-weight: 600;
-  font-size: 2rem;
-  line-height: 2.4rem;
-  padding: 1.5rem 4rem;
-  letter-spacing: 0.5rem;
-  border-radius: 5rem;
-  margin-top: 5rem;
-  background-color: #FAFAFA;
-  transition: all 0.2s;
-}
-.container .header .btn:hover {
-  box-shadow: 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.3);
-  transform: translateY(-0.3rem);
-}
-.container .header .btn:hover::after {
-  opacity: 0;
-  transform: scale(1.2);
-}
-.container .header .btn:active {
-  transform: translateY(-0.2rem);
-  transition: 0.1s;
-}
-.container .header .btn::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 5rem;
-  width: 100%;
-  height: 100%;
-  background: #FAFAFA;
-  z-index: -1;
-  transition: all 1s;
-}
-.container .header .btn_animated {
-  animation: btn_animate 2s ease-in-out 1.5s;
-  animation-fill-mode: backwards;
-}
 
 @keyframes btn_animate {
   0% {
@@ -136,6 +50,115 @@ body {
     transform: translateX(0px);
     opacity: 1;
   }
+}
+.btn {
+  display: inline-block;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #777777;
+  position: relative;
+  font-weight: 600;
+  font-size: 2rem;
+  line-height: 2.4rem;
+  padding: 1.5rem 4rem;
+  letter-spacing: 0.5rem;
+  border-radius: 5rem;
+  margin-top: 5rem;
+  background-color: #FAFAFA;
+  transition: all 0.2s;
+}
+.btn:hover {
+  box-shadow: 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.3);
+  transform: translateY(-0.3rem);
+}
+.btn:hover::after {
+  opacity: 0;
+  transform: scale(1.2);
+}
+.btn:active {
+  transform: translateY(-0.2rem);
+  transition: 0.1s;
+}
+.btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 5rem;
+  width: 100%;
+  height: 100%;
+  background: #FAFAFA;
+  z-index: -1;
+  transition: all 1s;
+}
+.btn_animated {
+  animation: btn_animate 2s ease-in-out 1.5s;
+  animation-fill-mode: backwards;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  position: relative;
+  background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(0, 0, 0, 0.7) 99.94%), url("../img/headerBack.png") center/cover no-repeat;
+  height: 95vh;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+}
+.header__logo {
+  position: absolute;
+  height: 7rem;
+  width: 5.6rem;
+  top: 5rem;
+  left: 5rem;
+}
+.header__box {
+  width: 100%;
+  text-align: center;
+  color: #FAFAFA;
+}
+
+.section-about {
+  margin-top: 8rem;
+}
+
+.title-first__main {
+  display: block;
+  font-weight: 800;
+  font-size: 5rem;
+  line-height: 6rem;
+  letter-spacing: 1rem;
+  text-transform: uppercase;
+  animation-name: leftToRight;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+}
+.title-first__sub {
+  display: block;
+  font-weight: 100;
+  font-size: 4rem;
+  line-height: 4.8rem;
+  letter-spacing: 0.5rem;
+  margin-top: 1rem;
+  animation-name: rightToLeft;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+}
+
+.title-secondary {
+  color: transparent;
+  text-align: center;
+  font-weight: 800;
+  letter-spacing: 1rem;
+  font-size: 3.6rem;
+  text-transform: uppercase;
+  background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(161, 79, 3, 0.7) 99.94%);
+  -webkit-background-clip: text;
+  transition: all 0.4s;
+  backface-visibility: hidden;
+}
+.title-secondary:hover {
+  transform: scale(1.05);
+  text-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
 }
 
 /*# sourceMappingURL=main.css.map */
