--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,167 +1,11 @@
-$color_gray: #777777;
-$color_white: #FAFAFA;
-$color-brown-light: #BA8554;
-$color-brown-dark: #A14F03;
-$color-black: #000000;
-
-@mixin btn-style($color) {
-  display: inline-block;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: $color;
-}
-
-*, ::after, ::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 10px;
-}
-
-body {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
-  color: $color_gray;
-  font-size: 1rem;
-  letter-spacing: 0.2rem;
-  padding: 5rem;
-}
-
-.container {
-  background: #f7f7f7f7;
-
-  .header {
-    display: flex;
-    align-items: center;
-    position: relative;
-    background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-black, 0.7) 99.94%), url("../img/headerBack.png") center / cover no-repeat;
-    height: 95vh;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
-
-    &__logo {
-      position: absolute;
-      height: 7rem;
-      width: 5.6rem;
-      top: 5rem;
-      left: 5rem;
-    }
-
-    &__box {
-      width: 100%;
-      text-align: center;
-      color: $color_white;
+@import "abstracts/varriable";
+@import "abstracts/mixins";
+@import 'base/base';
+@import "base/animatiion";
+@import "components/button";
+@import "layout/header";
+@import "pages/home";
+@import 'base/typography';
 
 
-      .title-first {
-        &__main {
-          display: block;
-          font-weight: 800;
-          font-size: 5rem;
-          line-height: 6rem;
-          letter-spacing: 1rem;
-          text-transform: uppercase;
-          animation-name: leftToRight;
-          animation-duration: 2s;
-          animation-timing-function: ease-in-out;
-        }
-
-        &__sub {
-          display: block;
-          font-weight: 100;
-          font-size: 4rem;
-          line-height: 4.8rem;
-          letter-spacing: 0.5rem;
-          margin-top: 1rem;
-          animation-name: rightToLeft;
-          animation-duration: 2s;
-          animation-timing-function: ease-in-out;
-        }
-      }
-    }
-
-    .btn {
-      @include btn-style($color-gray);
-      position: relative;
-      font-weight: 600;
-      font-size: 2rem;
-      line-height: 2.4rem;
-      padding: 1.5rem 4rem;
-      letter-spacing: .5rem;
-      border-radius: 5rem;
-      margin-top: 5rem;
-      background-color: $color_white;
-
-      transition: all .2s;
-
-      &:hover {
-        box-shadow: (0rem .4rem 0.4rem rgba($color-black, 0.3));
-        transform: translateY(-.3rem);
-
-        &::after {
-          opacity: 0;
-          transform: scale(1.2);
-        }
-      }
-
-      &:active {
-        transform: translateY(-.2rem);
-        transition: .1s;
-      }
-
-      &::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        border-radius: 5rem;
-        width: 100%;
-        height: 100%;
-        background: $color_white;
-        z-index: -1;
-        transition: all 1s;
-      }
-
-      &_animated {
-        animation: btn_animate 2s ease-in-out 1.5s;
-        animation-fill-mode: backwards;
-      }
-    }
-  }
-}
-
-@keyframes btn_animate {
-  0% {
-    opacity: 0;
-    transform: translateY(100px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
-
-@keyframes leftToRight {
-  0% {
-    transform: translateX(-10rem);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0px);
-    opacity: 1;
-  }
-}
-
-@keyframes rightToLeft {
-  0% {
-    transform: translateX(+10rem);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0px);
-    opacity: 1;
-  }
-}
 
