--- a/SASS/base/_typography.scss
+++ b/SASS/base/_typography.scss
@@ -42,3 +42,32 @@
     //transition: all 0.4s;
   }
 }
+
+.about {
+  &__title {
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 700;
+  }
+  &__title
+
+  &__desc{
+    font-size: 1.6rem;
+    font-weight: 400;
+  }
+  &__more{
+    margin-top: 4.1rem;
+    color: $color_gray;
+    text-decoration: none;
+    font-size: 1.6rem;
+    font-weight: 700;
+    padding-bottom: 1.5rem;
+    border-bottom: 1px solid $color-brown-light;
+    &:hover{
+    transform: translateY(-1rem);
+  }
+    &:active{
+    transform: translateY(-.5rem);
+  }
+  }
+}
