--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -3,8 +3,10 @@
 @import 'base/base';
 @import "base/animatiion";
 @import "components/button";
+@import "base/utilities";
 @import "layout/header";
 @import "pages/home";
+@import "layout/about";
 @import 'base/typography';
 
 
